Add stream HTTP APIs (#7)
