# command/proxy.go
@@ -11,6 +11,7 @@ import (
 
 	"github.com/nats-io/nats.go"
 	"github.com/nats-io/nats.go/jetstream"
+	"google.golang.org/protobuf/proto"
 
 	"github.com/coro-sh/coro/errtag"
 	"github.com/coro-sh/coro/log"
@@ -21,6 +22,7 @@ import (
 const (
 	natsRequestTimeout     = 10 * time.Second
 	maxConcurrentConsumers = 10
+	messageHandlerTimeout  = 5 * time.Second
 )
 
 type proxyOptions struct {
@@ -118,6 +120,9 @@ func (p *Proxy) Stop() error {
 }
 
 func (p *Proxy) handleMessage(ctx context.Context, msg *commandv1.PublishMessage, replier SubscriptionReplier) (err error) {
+	ctx, cancel := context.WithTimeout(ctx, messageHandlerTimeout)
+	defer cancel()
+
 	replyFailedErr := errors.New("reply failed")
 	reply := func(data []byte) error {
 		if rerr := replier(ctx, &commandv1.ReplyMessage{
@@ -144,6 +149,23 @@ func (p *Proxy) handleMessage(ctx context.Context, msg *commandv1.PublishMessage
 		}
 	}()
 
+	type userCredsGetter interface{ GetUserCreds() *commandv1.Credentials }
+	connectUser := func(ucg userCredsGetter) (*nats.Conn, jetstream.JetStream, error) {
+		creds := ucg.GetUserCreds()
+		if creds == nil {
+			return nil, nil, errors.New("user creds cannot be nil")
+		}
+		nc, err := natsutil.Connect(p.natsURL, creds.Jwt, creds.Seed)
+		if err != nil {
+			return nil, nil, fmt.Errorf("connect to nats server using operation creds: %w", err)
+		}
+		js, err := jetstream.New(nc)
+		if err != nil {
+			return nil, nil, fmt.Errorf("create jetstream client: %w", err)
+		}
+		return nc, js, nil
+	}
+
 	if op := msg.GetRequest(); op != nil {
 		if msg.CommandReplyInbox == "" {
 			if err := p.nc.Publish(op.Subject, op.Data); err != nil {
@@ -159,23 +181,14 @@ func (p *Proxy) handleMessage(ctx context.Context, msg *commandv1.PublishMessage
 	}
 
 	if op := msg.GetListStream(); op != nil {
-		if op.UserCreds == nil {
-			return errors.New("missing user creds for list stream operation")
-		}
-		nc, err := natsutil.Connect(p.natsURL, op.UserCreds.Jwt, op.UserCreds.Seed)
+		nc, js, err := connectUser(op)
 		if err != nil {
-			return fmt.Errorf("connect to nats server using operation creds: %w", err)
+			return err
 		}
-		js, err := jetstream.New(nc)
-		if err != nil {
-			return fmt.Errorf("create jetstream client: %w", err)
-		}
-
-		lctx, cancel := context.WithTimeout(ctx, 5*time.Second)
-		defer cancel()
+		defer nc.Close()
 
 		var infos []*jetstream.StreamInfo
-		lis := js.ListStreams(lctx)
+		lis := js.ListStreams(ctx)
 		for info := range lis.Info() {
 			infos = append(infos, info)
 		}
@@ -191,30 +204,144 @@ func (p *Proxy) handleMessage(ctx context.Context, msg *commandv1.PublishMessage
 		return reply(replyData)
 	}
 
-	if op := msg.GetStartConsumer(); op != nil {
+	if op := msg.GetGetStream(); op != nil {
+		nc, js, err := connectUser(op)
+		if err != nil {
+			return err
+		}
+		defer nc.Close()
+
+		stream, err := js.Stream(ctx, op.StreamName)
+		if err != nil {
+			return fmt.Errorf("get stream: %w", err)
+		}
+		info, err := stream.Info(ctx)
+		if err != nil {
+			return fmt.Errorf("get stream info: %w", err)
+		}
+
+		replyData, err := json.Marshal(info)
+		if err != nil {
+			return fmt.Errorf("marshal get stream reply data: %w", err)
+		}
+
+		return reply(replyData)
+	}
+
+	if op := msg.GetFetchStreamMessages(); op != nil {
+		if op.UserCreds == nil {
+			return errors.New("missing user creds for start consumer operation")
+		}
+		consumerNC, err := natsutil.Connect(p.natsURL, op.UserCreds.Jwt, op.UserCreds.Seed)
+		if err != nil {
+			return fmt.Errorf("connect to nats server using consumer creds: %w", err)
+		}
+		defer consumerNC.Close()
+
+		js, err := jetstream.New(consumerNC)
+		if err != nil {
+			return fmt.Errorf("create consumer jetstream client: %w", err)
+		}
+
+		jsc, err := js.CreateOrUpdateConsumer(ctx, op.StreamName, jetstream.ConsumerConfig{
+			DeliverPolicy: jetstream.DeliverByStartSequencePolicy,
+			OptStartSeq:   op.StartSequence,
+			AckPolicy:     jetstream.AckNonePolicy,
+			MaxDeliver:    1, // safeguard: shouldn't matter since we are using ack none policy
+		})
+		if err != nil {
+			return fmt.Errorf("create jetstream consumer: %w", err)
+		}
+
+		batch, err := jsc.FetchNoWait(int(op.BatchSize))
+		if err != nil {
+			return fmt.Errorf("fetch stream batch: %w", err)
+		}
+		if batch.Error() != nil {
+			return fmt.Errorf("batch contains error: %w", batch.Error())
+		}
+		batchMsg := &commandv1.StreamMessageBatch{}
+		for bmsg := range batch.Messages() {
+			md, err := bmsg.Metadata()
+			if err != nil {
+				return fmt.Errorf("get message metadata: %w", err)
+			}
+			batchMsg.Messages = append(batchMsg.Messages, &commandv1.StreamMessage{
+				StreamSequence: md.Sequence.Stream,
+				Timestamp:      md.Timestamp.Unix(),
+			})
+		}
+		replyData, err := proto.Marshal(batchMsg)
+		if err != nil {
+			return fmt.Errorf("marshal stream message batch: %w", err)
+		}
+		return reply(replyData)
+	}
+
+	if op := msg.GetGetStreamMessageContent(); op != nil {
+		nc, js, err := connectUser(op)
+		if err != nil {
+			return err
+		}
+		defer nc.Close()
+
+		stream, err := js.Stream(ctx, op.StreamName)
+		if err != nil {
+			return fmt.Errorf("get stream: %w", err)
+		}
+		rawStreamMsg, err := stream.GetMsg(ctx, op.Sequence)
+		if err != nil {
+			return fmt.Errorf("get stream message: %w", err)
+		}
+		replyData, err := proto.Marshal(&commandv1.StreamMessageContent{
+			StreamSequence: rawStreamMsg.Sequence,
+			Timestamp:      rawStreamMsg.Time.Unix(),
+			Data:           rawStreamMsg.Data,
+		})
+		if err != nil {
+			return fmt.Errorf("marshal stream message content: %w", err)
+		}
+		return reply(replyData)
+	}
+
+	if op := msg.GetStartStreamConsumer(); op != nil {
 		if op.UserCreds == nil {
 			return errors.New("missing user creds for start consumer operation")
 		}
 
 		userCreds := op.UserCreds
 		consumerID := op.ConsumerId
-		err = p.consumerPool.StartConsumer(ctx, op.StreamName, consumerID, userCreds.Jwt, userCreds.Seed, func(jsMsg jetstream.Msg, cerr error) {
+		err = p.consumerPool.StartConsumer(ctx, op.StreamName, op.StartSequence, consumerID, userCreds.Jwt, userCreds.Seed, func(jsMsg jetstream.Msg, cerr error) {
+			// reset context timeout for the consumer message handler
+			hctx, hcancel := context.WithTimeout(context.WithoutCancel(ctx), messageHandlerTimeout)
+			defer hcancel()
+
 			replyMsg := &commandv1.ReplyMessage{
 				Id:    msg.Id,
 				Inbox: msg.CommandReplyInbox,
 			}
-
 			if jsMsg != nil {
-				replyMsg.Data = jsMsg.Data()
-				if md, err := jsMsg.Metadata(); err == nil {
-					replyMsg.Id += "_" + strconv.Itoa(int(md.Sequence.Consumer))
+				md, err := jsMsg.Metadata()
+				if err != nil {
+					p.logger.Error("failed to get consumer message metadata", "error", err, "reply_message.id", replyMsg.Id)
+					return
+				}
+				replyMsg.Id += "_" + strconv.Itoa(int(md.Sequence.Consumer))
+				replyMsg.Data, err = proto.Marshal(&commandv1.StreamConsumerMessage{
+					StreamSequence:  md.Sequence.Stream,
+					MessagesPending: md.NumPending,
+					Timestamp:       md.Timestamp.Unix(),
+				})
+				if err != nil {
+					p.logger.Error("failed to marshal consumer message", "error", err, "reply_message.id", replyMsg.Id)
+					return
 				}
 			}
 			if cerr != nil {
 				errStr := cerr.Error()
 				replyMsg.Error = &errStr
 			}
-			if err := replier(ctx, replyMsg); err != nil {
+			if err := replier(hctx, replyMsg); err != nil {
 				p.logger.Error(
 					"failed to forward jetstream ephemeral consumer message to broker",
 					"error", err,
@@ -229,14 +356,14 @@ func (p *Proxy) handleMessage(ctx context.Context, msg *commandv1.PublishMessage
 		return reply(nil)
 	}
 
-	if op := msg.GetSendConsumerHeartbeat(); op != nil {
+	if op := msg.GetSendStreamConsumerHeartbeat(); op != nil {
 		if err := p.consumerPool.SendConsumerHeartbeat(op.ConsumerId); err != nil {
 			return err
 		}
 		return reply(nil)
 	}
 
-	if op := msg.GetStopConsumer(); op != nil {
+	if op := msg.GetStopStreamConsumer(); op != nil {
 		if err := p.consumerPool.StopConsumer(op.ConsumerId); err != nil && !errtag.HasTag[errtag.NotFound](err) {
 			return err
 		}
